# process-viewer

./: .gitignore  CLAUDE.md  README.md  app.py  process_identifier.py  process_monitor.py  pyproject.toml
static/css/: style.css
static/js/: app.js
templates/: base.html  index.html
