[project]
name = "pyprocess-viewer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-socketio>=5.5.1",
    "pillow>=12.0.0",
    "playwright>=1.57.0",
    "psutil>=7.1.3",
    "python-dotenv>=1.2.1",
    "python-socketio[client]>=5.15.1",
    "requests>=2.32.5",
]
